# start-wasmcloud

./: .gitignore  Cargo.toml  Makefile.toml  README.md  cargo-generate.toml  wadm.yaml  wasmcloud.toml
src/: app.rs  lib.rs  main.rs  server.rs
wit/: world.wit
