[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
bytes = "1.9"
futures = "0.3"
hydration_context = "0.2"
wasi = { version = "0.13", optional = true }
leptos = { verison = "0.7" }
leptos_meta = { verison = "0.7" }
leptos_router = { verison = "0.7" }
leptos_wasi = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2.99", optional = true }
wit-bindgen = { version = "0.36", optional = true }

[features]
# This is your client-side feature.
hydrate = [
  "leptos/hydrate",
  "dep:wasm-bindgen",
]

# This is your server-side feature.
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_wasi",
  "dep:wasi",
  "dep:wit-bindgen",
]

# Defines a size-optimized profile for the WASM bundle in release mode.
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# == Hydrate (client)
lib-profile-release = "wasm-release"
lib-features = ["hydrate"]

# ==== Rebuild the std crates using the optimized profile.
lib-cargo-args = [
    "-Zbuild-std=std,panic_abort,core,alloc",
    "-Zbuild-std-features=panic_immediate_abort",
]

# == SSR
bin-profile-release = "wasm-release"
bin-target-triple = "wasm32-wasip2"
bin-features = ["ssr"]
bin-target-dir = "{{component_outdir}}"

# ==== Rebuild the std crates using the optimized profile.
bin-cargo-args = [
    "-Zbuild-std=std,panic_abort,core,alloc",
    "-Zbuild-std-features=panic_immediate_abort,wasi_ext",
]
